--- a/problem2/package.json
+++ b/problem2/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "backend",
+  "name": "problem2",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "index.js", 
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "mathjs": "^14.4.0"
-  },
-  "description": ""
+    "express": "^5.1.0"
+  }
 }
